[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/enemies/ArmMaterial.tres" type="Material" id=1]
[ext_resource path="res://src/enemies/Enemy.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.6, 2, 0.3 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.207843, 0.207843, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.4, 0.1, 0.1 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.1, 0.1, 0.8 )

[sub_resource type="CapsuleShape" id=7]
radius = 0.5

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.463142, 1, 0.198101 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.419, 0.405, 0.342 )

[sub_resource type="Animation" id=9]
resource_name = "ATTACK"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/ArmLeft:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 35, 55, 0 ), Vector3( -25, -11, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rig/ArmRight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 35, -55, 0 ), Vector3( -25, 11, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/ArmRight:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -30, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rig/ArmLeft:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 5, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "WALK"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/ArmRight:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -30, 0, 0 ), Vector3( 5, 0, 0 ), Vector3( -30, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rig/ArmLeft:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 5, 0, 0 ), Vector3( -30, 0, 0 ), Vector3( 5, 0, 0 ) ]
}

[node name="Enemy" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Rig" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="Rig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="Eyes" type="MeshInstance" parent="Rig"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.70095, -0.168343 )
mesh = SubResource( 3 )
material/0 = null

[node name="ArmLeft" type="Position3D" parent="Rig"]
transform = Transform( 1, 0, 0, 0, 0.996195, -0.0871558, 0, 0.0871558, 0.996195, -0.35637, 1.40892, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Rig/ArmLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0221028, 0.0140086, -0.376567 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = ExtResource( 1 )

[node name="ArmRight" type="Position3D" parent="Rig"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0.356, 1.409, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Rig/ArmRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.014, -0.377 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 7 )

[node name="DamageTakenArea" type="Area" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="DamageTakenArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 10 )

[node name="AttackArea" type="Area" parent="."]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="AttackArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.286, -0.63 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ATTACK = SubResource( 9 )
anims/RESET = SubResource( 5 )
anims/WALK = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="DamageTakenArea" to="." method="_on_DamageTakenArea_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
